# MMU_control

./: .gitattributes  .gitignore  MMUControl.spec  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CODING_RULES.md  IMPLEMENTATION_PLAN.md  PRD.md  TASKS.md  requirements-venv-inputs.patch  requirements.md
scripts/: build_exe.ps1
src/mmu_control/: __init__.py  app.py
src/mmu_control.egg-info/: SOURCES.txt  requires.txt
src/mmu_control/core/: __init__.py  automation_import_parser.py  automation_runner.py  automation_terminal.py  config_manager.py  error_recovery.py  interactive_shell.py  logging_config.py  minicom_manager.py  power_supply_manager.py  sftp_manager.py  ssh_manager.py  terminal_sequences.py
src/mmu_control/models/: __init__.py  automation.py  command_set.py  profile.py  settings.py
src/mmu_control/resources/: __init__.py  power_supply_commands.json
src/mmu_control/storage/: automation_store.py  command_set_store.py  profile_store.py
src/mmu_control/ui/: automation_editor_dialog.py  automation_import_dialog.py  (+4 more)
tests/: conftest.py  test_automation.py  test_automation_import.py  test_automation_import_parser.py  test_automation_start_conditions.py  test_command_set_store.py  test_config_manager.py  test_error_recovery.py  test_interactive_shell.py  test_logging_config.py  test_main_window.py  test_minicom_manager.py  test_power_supply_manager.py  test_profile_store.py  test_pyinstaller_spec.py  test_settings.py  test_sftp_manager.py  test_ssh_manager.py  test_terminal_sequences.py  test_terminal_widget.py
(+3 files in other folders)
