[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mmu-control"
version = "0.1.0"
description = "Windows GUI tool for controlling Linux server and board workflows over SSH."
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
mmu-control = "mmu_control.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
